# changereport

./: .gitignore  AI_COSTS_BREAKDOWN.md  ANTHROPIC_SETUP.md  PDF_FORMAT_CHANGE.md  PDF_SECURITY.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  USER_GUIDE.md  change_report_generator.html  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
assets/: README.md  create-logo.js
changereport/: __init__.py  __main__.py  analysis.py  charts.py  cli.py  constants.py  jargon.py  parser.py  report.py  webapp.py
changereport/templates/: base.html  index.html  results.html
public/: app.js  index.html  report-styles.css  report.html  report.js  styles.css
